<resources>
    <string name="app_name">Tenzo</string>

    <string name="title_section0">CPanel</string>
    <string name="title_section1">Control</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Connect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

<!--  CPanel Home  -->
    <string name="takeOff">Take Off</string>
    <string name="land">Land</string>
    <string name="pid">Enable Pid</string>
    <string name="pidEx">Pid disabled</string>
    <string name="speed">Speed</string>
    <string name="roll">Roll</string>
    <string name="rollEx">0°</string>
    <string name="pitch">Pitch</string>
    <string name="yawEx">0°</string>
    <string name="pitchEx">0°</string>
    <string name="yaw">Yaw</string>
    <string name="address">Find</string>
    <string name="update">Last Update</string>
    <string name="updateEx">Updated on Wed 1 3:00pm</string>
    <string name="log">Last log</string>
    <string name="logEx">landing protocol completed</string>
    <string name="Info">Information</string>
    <string name="Land">Land</string>
    <string name="testConnection">Test</string>
    <string name="status">Status</string>
    <string name="gOrient">Get Orientation</string>
    <string name="stat">Get Status</string>
    <string name="Enpid">Pid</string>

    <!-- Settings -->

    <string name="bluPar">Bluetooth Settings</string>
    <string name="blurate">Rate</string>
    <string name="TurnOn">Turn On</string>
    <string name="visible">Visible</string>
    <string name="Scan">Paired</string>
    <string name="toggle">Enable</string>
    <string name="visibile">Visibility</string>
    <string name="send">Send</string>
    <string name="text_pair">Pair</string>
    <string name="text_list_devices">List of Devices</string>

  <!-- Blu List -->

    <string name="bluEx">BluDev</string>
    <string name="bluIDEx">Id Device</string>

    <!-- Control -->

    <string name="ARoll">Angular Roll</string>
    <string name="APitch">Angular Pitch</string>
    <string name="AYaw">Angular Yaw</string>
    <string name="WRoll">Omega Roll</string>
    <string name="WPitch">Omega Pitch</string>
    <string name="WYaw">Omega Yaw</string>
    <string name="Kp">Kp</string>
    <string name="Ki">Ki</string>
    <string name="Kd">Kd</string>
    <string name="Receive">Receive</string>
    <string name="Send">Send</string>

    <!-- NoConnection -->

    <string name="welcome">Welcome!</string>
    <string name="noconn">No Internet connection detected</string>
    <string name="connectionMess">Check your settings</string>
    <string name="houston">Call Houston</string>
    <string name="check">Check</string>
    <string name="ctrlPageTitle">Control</string>

    <!-- Connect -->
    <string name="welcomeTenzo">Welcome to Tenzo</string>
    <string name="connect">Connect</string>
    <string name="iniMess">Please establish connection</string>
    <string name="tour">Take a tour</string>


</resources>
