<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingBottom="3sp"
        android:paddingTop="25sp"
        android:paddingLeft="10sp"
        android:text="@string/bluPar"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#bebebe"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="6dp"
        />

    <Button
        android:id="@+id/turnOnBlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="on"
        android:text="@string/TurnOn" />

    <Button
        android:id="@+id/turnOffBlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="on"
        android:text="@string/TurnOn" />


    <Button
        android:id="@+id/visibleBu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="visible"
        android:text="@string/visible" />

    <Button
        android:id="@+id/scanBlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="list"
        android:text="@string/Scan" />

    <ListView
        android:id="@+id/blueDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

    </ListView>

</LinearLayout>