<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcdcdc" >
    
    <RelativeLayout 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

	            <LinearLayout
	                android:orientation="vertical"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="4dp"
	                android:layout_marginBottom="4dp"
	                android:layout_marginLeft="4dp"
                	android:layout_marginRight="4dp">

			               <LinearLayout
			                   android:layout_width="wrap_content"
			                   android:layout_height="wrap_content">
		                        
			               <RelativeLayout
		                        android:layout_width="match_parent"
		                        android:layout_height="wrap_content"
		                        android:background="#000000"
		                        android:gravity="center">

						                <ImageView
						                    android:id="@+id/Picture"
						                    android:layout_width="wrap_content"
						                    android:layout_height="wrap_content"
						                    android:adjustViewBounds="true"
						                    android:minHeight="200dp"
						                    android:src="@drawable/home" />

			               				<LinearLayout
			               				    android:id="@+id/takeOffLand"
									        android:layout_width="match_parent"
									        android:layout_height="wrap_content"
									        android:layout_alignParentBottom="true"
									        android:clickable="true"
									        android:background="#7000"
									        android:paddingBottom="10dp"
									        android:paddingTop="10dp"
									        android:baselineAligned="false" >
								        
									        <LinearLayout
									            android:id="@+id/takeOff"
									            android:layout_width="wrap_content"
									            android:layout_height="wrap_content"
                                                android:clickable="true"
									            android:layout_weight="1"
									            android:gravity="center" >
						                       		
										            <ImageView
									                    android:layout_width="30dp"
									                    android:layout_height="30dp"
									                    android:adjustViewBounds="true"
									                    android:src="@drawable/tenzo"
									                    android:layout_gravity="center" /> 
										        	
												     <TextView 
												        android:id="@+id/take"
												        android:layout_width="wrap_content"
												        android:layout_height="wrap_content"
												        android:textSize="18sp"
												        android:textColor="#ffffff"
												        android:text="@string/takeOff"
												        android:layout_gravity="center"/>			                        
										        	      
											 </LinearLayout>
										     
									        <LinearLayout
									            android:id="@+id/land"
									            android:layout_width="wrap_content"
									            android:layout_height="wrap_content"
									            android:layout_weight="1"
									            android:gravity="center"
                                                android:clickable="true"
									            android:paddingRight="15dp" >

										           <TextView
										               android:id="@+id/landTxt"
                                                       android:paddingTop="3dp"
										               android:layout_width="wrap_content"
										               android:layout_height="wrap_content"
										               android:layout_gravity="center"
										               android:text="@string/land"
										               android:textColor="#ffffff"
										               android:textSize="18sp" />
											     
										     </LinearLayout>
						                    
								        </LinearLayout>
								        
			               </RelativeLayout>
			               
			               </LinearLayout>

			               <LinearLayout
			                   android:id="@+id/gtdEventPageLL"
			                   android:layout_width="match_parent"
			                   android:layout_height="wrap_content"
			                   android:layout_marginTop="10dp"
			                   android:baselineAligned="false"
			                   android:gravity="center_horizontal"
			                   android:orientation="vertical"
			                   android:paddingBottom="5dp"
			                   android:paddingTop="25dp"
			                   android:showDividers="none" >

			                   <TextView
                                   android:id="@+id/state"
			                       android:layout_width="wrap_content"
			                       android:layout_height="wrap_content"
			                       android:layout_gravity="center"
			                       android:text="Robotics guide"
			                       android:textColor="#808080"
			                       android:textSize="20sp"
			                       android:textStyle="bold" />

			                   <TextView
			                       android:id="@+id/warning"
			                       android:layout_width="wrap_content"
			                       android:layout_height="wrap_content"
			                       android:layout_gravity="center"
			                       android:text="Safe"
                                   android:textColor="@color/green"
                                   android:paddingTop="10dp"
			                       android:textIsSelectable="true"
			                       android:textSize="25sp" />
			               </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:paddingBottom="4sp"
                        android:paddingTop="15dp"
                        android:orientation="horizontal"
                        android:weightSum="3" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/testConn"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:text="@string/testConnection"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/enablePidButt"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:text="@string/pid"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/statusButt"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:text="@string/status"/>

                        </LinearLayout>

                    </LinearLayout>


                    <TextView
                            android:id="@+id/TextInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingBottom="3sp"
                            android:paddingTop="25sp"
                            android:paddingLeft="10sp"
                            android:text="@string/Info"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dip"
                            android:background="#bebebe"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="6dp"
                            />

                                <LinearLayout
                                    android:id="@+id/gameInformationTab"
                                    android:orientation="vertical"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content">


                                    <LinearLayout
                                        android:id="@+id/ScoreSection"
                                        android:orientation="vertical"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content">

                                        <TextView
                                            android:layout_marginLeft="10dp"
                                            android:layout_marginRight="10dp"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:paddingTop="4sp"
                                            android:text="@string/log"
                                            android:textColor="#808080"
                                            android:textSize="16sp" />

                                        <TextView
                                            android:id="@+id/log1"
                                            android:layout_marginLeft="10dp"
                                            android:layout_marginRight="10dp"
                                            android:paddingLeft="5dp"
                                            android:paddingRight="5dp"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textSize="16sp"
                                            android:paddingBottom="15dp"
                                            android:paddingTop="10dp"
                                            android:text="@string/logEx"
                                            android:textColor="#000000"
                                            android:textIsSelectable="true"/>

                                    </LinearLayout>

                                </LinearLayout>
-->
                                <LinearLayout android:id="@+id/luogoButtonLayout"
                                        android:layout_width="fill_parent"
                                        android:layout_height="50dp"
                                        android:orientation="horizontal"
                                        android:background="@color/darkgrey"
                                        android:layout_gravity="center_horizontal|center_vertical"
                                        android:gravity="center_vertical"
                                        android:layout_alignParentBottom="true">

                                        <TextView
                                            android:id="@+id/luogoEventPage"
                                            android:layout_width="0dip"
                                            android:layout_height="wrap_content"
                                            android:text="@string/address"
                                            android:textColor="#ffffff"
                                            android:textSize="18sp"
                                            android:textStyle="bold"
                                            android:layout_weight="1"
                                            android:gravity="center"/>

                                        <ImageView
                                            android:id="@+id/btnCalls"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:src="@drawable/map3"
                                            android:paddingRight="8dp"
                                            android:gravity="right|center_vertical"
                                            android:contentDescription="@string/address"/>

                                    </LinearLayout>
		            </LinearLayout>
 		</RelativeLayout>
</ScrollView>

